--- a/www-framework/kpw/template/tt/_include/www_head.html
+++ b/www-framework/kpw/template/tt/_include/www_head.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8;" />
-    <link rel="stylesheet" href="css/style.css" type="text/css" />
+    <link rel="stylesheet" href="/css/style.css" type="text/css" />
     <title>2008 Korean Perl Workshop</title>
   </head>
   <body>
@@ -10,12 +10,12 @@
       <div id="navigation">
         <div class="center">
           <ul>
-            <li><a href="index.html">새소식</a></li>
-            <li><a href="schedule.html">일정</a></li>
-            <li><a href="location.html" class="selected">위치</a></li>
-            <li><a href="faq.html">FAQ</a></li>
-            <li><a href="links.html">링크</a></li>
-            <li><a href="register.html">참가신청</a></li>
+            <li><a href="/">새소식</a></li>
+            <li><a href="/schedule">일정</a></li>
+            <li><a href="/location" class="selected">위치</a></li>
+            <li><a href="/faq">FAQ</a></li>
+            <li><a href="/links">링크</a></li>
+            <li><a href="/register">참가신청</a></li>
           </ul>
         </div>
       </div>
