--- a/www-framework/kpw/template/tt/default/location.html
+++ b/www-framework/kpw/template/tt/default/location.html
@@ -29,4 +29,4 @@
           </div>
 
   [% INCLUDE "_include/sponsors.html" %]
-  [% INCLLDE "_include/www_foot.html" %]
+  [% INCLUDE "_include/www_foot.html" %]
