--- a/www-framework/kpw/html/css/style.css
+++ b/www-framework/kpw/html/css/style.css
@@ -41,7 +41,7 @@ a {
     background: white;
 }
 .sponsors h2 {
-    background:transparent url(/images/sponsors_bg.png) no-repeat scroll left top;
+    background:transparent url(images/sponsors_bg.png) no-repeat scroll left top;
     font-size:1.0em;
     font-weight:normal;
     color:#777;
@@ -72,6 +72,9 @@ a {
     list-style-type:none;
     margin:0 0 10px;
     text-align:center;
+}
+.sponsors a {
+    color: #ffffff;
 }
 
 /* Container */
@@ -125,7 +128,7 @@ a {
 /* Content */
 #content {
         padding: 120px 0 0px;
-        background: #777 url(/images/kpw_horizontal.png) no-repeat scroll center 20px !important;
+        background: transparent url(../images/kpw_horizontal.png) no-repeat scroll center 20px !important;
         
 }
 
@@ -146,14 +149,14 @@ div.box {
 }
 div.box_top {
         height: 30px;
-        background: transparent url(/images/box_top.gif) no-repeat scroll center bottom !important;
+        background: transparent url(../images/box_top.gif) no-repeat scroll center bottom !important;
 }
 div.box_middle {
-        background: transparent url(/images/box_middle.gif) repeat-y scroll center top !important;
+        background: transparent url(../images/box_middle.gif) repeat-y scroll center top !important;
 }
 div.box_bottom {
         height: 150px;
-        background: transparent url(/images/box_bottom.gif) no-repeat scroll center top !important;
+        background: transparent url(../images/box_bottom.gif) no-repeat scroll center top !important;
 }
 
 /* Content Text */
@@ -204,12 +207,11 @@ div.content_block tr.alt td {
 div.content_block tr.last td {
         border-bottom: none;
 }
-
 */
 
 /* Footer Text */
 div.footer_logo {
-        background: transparent url(/images/kpw_footer.png) no-repeat scroll center top !important;
+        background: transparent url(../images/kpw_footer.png) no-repeat scroll center top !important;
         margin-top: 20px;
         color: #999;
         font-size: 0.9em;
@@ -282,25 +284,25 @@ div.footer_block a:hover {
         height: 0;
         clear: both;
 }
-
 #group-grid {
         margin: 15px 20px;
 }
-
 #register-form {
         margin: 15px 20px;
 }
-
 .banner {
-    margin: 15px 20px 5px;
-    padding: 0;
+        margin: 15px 20px 5px;
+        padding: 0;
 }
-
 .topic {
-       background:transparent url(/kpw2008/images/post.gif) no-repeat scroll 0 2px;
-       padding-left:20px;
+        background:transparent url(/kpw2008/images/post.gif) no-repeat scroll 0 2px;
+        padding-left:20px;
 }
-
 .author {
         color:#333333;
+}
+.map-img {
+        width: 95%;
+	margin: 10px;
+	text-align: center;
 }
