--- a/www-framework/kpw/template/tt/default/location.html
+++ b/www-framework/kpw/template/tt/default/location.html
@@ -1,32 +1,19 @@
-  
-  [% INCLUDE "_include/www_head.html" %]
-
-          <div class="width66 float_left">
             <div class="content_block">
-              <h2>오시는 길</h2>
-              <p>
-                주소 및 연락처
-                <ul>
-                  <li> 서울시 서초구 서초동 1307-26 승원빌딩 3층 </li>
-                  <li> 02 - 3476 - 0118 </li>
-                </ul>
-              </p>
-              <p>
-                행사장 오시는 길
-                <ul>
-                  <li> 지하철 2호선을 타고 강남역 6번 출구로 나오세요. </li>
-                  <li> 약 50M 직진하시면 파고다어학원 건물이 보입니다. </li>
-                  <li> 파고다 어학원 바로 뒷 건물(승원빌딩)의 토즈(TOZ) 입니다. </li>
-                </ul>
-              </p>
-              <div id="map-img" style="margin: 10px">
-                <img style="width:476px;height:281px" src="images/map-01.gif" />
-              </div>
-              <div id="map-img" style="margin: 10px">
-                <img style="width:400px;height:300px" src="images/map-02.png" />
-              </div>
+              <h1>오시는 길</h1>
+	      <br />
+	      <br />
+	      <h3>주소 및 연락처</h3>
+	      <ul>
+		<li> 서울시 서초구 서초동 1307-26 승원빌딩 3층 </li>
+		<li> 02 - 3476 - 0118 </li>
+	      </ul>
+	      <br />
+	      <h3>행사장 오시는 길</h3>
+	      <ul>
+                <li> 지하철 2호선을 타고 강남역 6번 출구로 나오세요. </li>
+                <li> 약 50M 직진하시면 파고다어학원 건물이 보입니다. </li>
+                <li> 파고다 어학원 바로 뒷 건물(승원빌딩)의 토즈(TOZ) 입니다. </li>
+	      </ul>
+	      <div class="map-img" style="margin: 10px;"><img src="images/map-01.gif" /></div>
+              <div class="map-img" style="margin: 10px;"><img src="images/map-02.png" /></div>
             </div>
-          </div>
-
-  [% INCLUDE "_include/sponsors.html" %]
-  [% INCLUDE "_include/www_foot.html" %]
