--- a/trunk/www-framework/kpw/html/css/style.css
+++ b/trunk/www-framework/kpw/html/css/style.css
@@ -30,7 +30,10 @@ h4 {
         font-size: 110%;
 }
 a {
-        color: #22F;
+        color: #ff8080;
+}
+a:hover {
+        color: #388dd5;
 }
 
 /**
@@ -41,7 +44,7 @@ a {
     background: white;
 }
 .sponsors h2 {
-    background:transparent url(images/sponsors_bg.png) no-repeat scroll left top;
+    background:transparent url(/images/sponsors_bg.png) no-repeat scroll left top;
     font-size:1.0em;
     font-weight:normal;
     color:#777;
@@ -104,8 +107,8 @@ a {
 }
 
 #navigation li {
-        margin:0;
-        float:left;
+        margin: 0;
+        float: left;
         list-style-image: none;
         list-style-position: outside;
         list-style-type: none;
@@ -117,18 +120,18 @@ a {
         padding: 0 1.2em;
         text-decoration: none;
 }
-#navigation li a:hover {
+#navigation li a: hover {
         text-decoration: underline;
 }
 #navigation ul li a.selected {
-  font-weight:bold;
+        font-weight: bold;
         color: yellow;
 }
 
 /* Content */
 #content {
         padding: 120px 0 0px;
-        background: transparent url(../images/kpw_horizontal.png) no-repeat scroll center 20px !important;
+        background: transparent url(/images/kpw_horizontal.png) no-repeat scroll center 20px !important;
         
 }
 
@@ -149,14 +152,14 @@ div.box {
 }
 div.box_top {
         height: 30px;
-        background: transparent url(../images/box_top.gif) no-repeat scroll center bottom !important;
+        background: transparent url(/images/box_top.gif) no-repeat scroll center bottom !important;
 }
 div.box_middle {
-        background: transparent url(../images/box_middle.gif) repeat-y scroll center top !important;
+        background: transparent url(/images/box_middle.gif) repeat-y scroll center top !important;
 }
 div.box_bottom {
         height: 150px;
-        background: transparent url(../images/box_bottom.gif) no-repeat scroll center top !important;
+        background: transparent url(/images/box_bottom.gif) no-repeat scroll center top !important;
 }
 
 /* Content Text */
@@ -175,9 +178,9 @@ div.content_block .meta {
 }
 div.content_faq {
         margin: 20px 30px 0;
-  border-width: 1px;
-  border-color:#CCCCCC;
-  border-style: solid none none solid;
+        border-width: 1px;
+        border-color: #CCCCCC;
+        border-style: solid none none solid;
 }
 /*
 div.content_block .table_warpper {
@@ -211,7 +214,7 @@ div.content_block tr.last td {
 
 /* Footer Text */
 div.footer_logo {
-        background: transparent url(../images/kpw_footer.png) no-repeat scroll center top !important;
+        background: transparent url(/images/kpw_footer.png) no-repeat scroll center top !important;
         margin-top: 20px;
         color: #999;
         font-size: 0.9em;
@@ -248,7 +251,7 @@ div.footer_block a {
   color: #999;
   text-decoration: none;
 }
-div.footer_block a:hover {
+div.footer_block a: hover {
   text-decoration: underline;
   color: yellow;
 }
@@ -295,14 +298,12 @@ div.footer_block a:hover {
         padding: 0;
 }
 .topic {
-        background:transparent url(/kpw2008/images/post.gif) no-repeat scroll 0 2px;
-        padding-left:20px;
+        background: transparent url(/kpw2008/images/post.gif) no-repeat scroll 0 2px;
+        padding-left: 20px;
 }
 .author {
-        color:#333333;
+        color: #333333;
 }
 .map-img {
-        width: 95%;
-	margin: 10px;
 	text-align: center;
 }
