--- a/trunk/www/kpw2008/css/style.css
+++ b/trunk/www/kpw2008/css/style.css
@@ -93,7 +93,7 @@ a {
         margin: 0;
         padding: 0;
         height: 40px;
-        background-color: #333;
+        background-color: #c00f0f;
 }
 
 #navigation ul {
