--- a/www/kpw2008/css/style.css
+++ b/www/kpw2008/css/style.css
@@ -152,7 +152,7 @@ div.box_top {
         background: transparent url(../images/box_top.gif) no-repeat scroll center bottom !important;
 }
 div.box_middle {
-        background: transparent url(../images/box_middle.gif) repeat-y scroll center top !important;
+        background: transparent url(../images/box_middle.png) repeat-y scroll center top !important;
 }
 div.box_bottom {
         height: 150px;
