--- a/www-framework/kpw/template/tt/_include/wrapper.html
+++ b/www-framework/kpw/template/tt/_include/wrapper.html
@@ -31,7 +31,7 @@
       </div>
 [% INCLUDE '_include/www_foot.html' %]
     </div>
-[% INCLUDE '_include/google_analytics.html' %]
+[%# INCLUDE '_include/google_analytics.html' %]
   </body>
 </html>
 
