--- a/www-framework/kpw/template/tt/default/links.html
+++ b/www-framework/kpw/template/tt/default/links.html
@@ -1,17 +1,17 @@
             <div class="content_block">
               <h1>펄관련 링크 모음</h1>
               <br />
-	      <br />
+              <br />
               <h3>국내 펄관련 링크</h3>
               <ul>
                 <li>펄마니아
-                  <a href="http://perlmania.or.kr">perlmania.or.kr</a></li>
-                <li>펄덕펄덕 (펄 문서 한글화 프로젝트)
-                  <a href="http://doc.perl.kr">doc.perl.kr</a></li>
-                <li> 펄로그(Perl Blog)
-                  <a href="http://www.perlog.org/">perlog.org</a></li>
+                  <a href="http://perlmania.or.kr">perlmania.or.kr</a></dd>
+                <li>펄덕펄덕(펄 문서 한글화 프로젝트)
+                  <a href="http://doc.perl.kr">doc.perl.kr</a></dd>
+                <li>펄로그(Perl Blog)
+                  <a href="http://www.perlog.org/">perlog.org</a></dd>
                 <li>한국 펄 사용자 모임
-                  <a href="http://perl.or.kr">perl.or.kr</a></li>
+                  <a href="http://perl.or.kr">perl.or.kr</a></dd>
                 <li>펄마니아 스터디
                   <a href="http://groups.google.com/perlmania_study">groups.google.com/perlmania_study</a></li>
               </ul>
@@ -22,5 +22,13 @@
                   <a href="http://perl.org">perl.org</a></li>
                 <li>perl.com
                   <a href="http://perl.com">perl.com</a></li>
+              </ul>
+              <br />
+              <h3>펄 IRC관련 링크</h3>
+              <ul>
+                <li>Web IRC
+                  <a href="http://doc.perl.kr/twiki/bin/view/Wiki/WebIRC">http://doc.perl.kr/twiki/bin/view/Wiki/WebIRC</a></li>
+                <li>펄 IRC
+                  <a href="http://doc.perl.kr/twiki/bin/view/Wiki/PerlIRC">http://doc.perl.kr/twiki/bin/view/Wiki/PerlIRC</a></li>
               </ul>
             </div>
