--- a/www-framework/kpw/template/tt/register/default.html
+++ b/www-framework/kpw/template/tt/register/default.html
@@ -1,26 +1,36 @@
-
+            <div class="content_block">
+              <h1>사전등록</h1>
   [% IF form_messages %]
-  <ul>
+              <ul>
   [% FOREACH msg IN form_messages %]
-  <li>[% c.config.messages.${msg.key}.${msg.value} %]</li>
+                <li>[% c.config.messages.${msg.key}.${msg.value} %]</li>
   [% END %]
-  </ul>
+              </ul>
   [% END %] 
-
-  <form action="/register/do" method="post">
-  eMail : <input type="text" name="email" size="30" /><br/>
-  비밀번호 : <input type="password" name="password" size="10" /><br/>
-  비밀번호(확인) : <input type="password" name="password_confirm" size="10" /><br/>
-  이름 : <input type="text" name="name" size="10" /><br/>
-  닉네임 : <input type="text" name="nick" size="10" /><br/>
-  휴대전화 : <input type="text" name="phone" size="20" /><br/>
-  티셔츠 사이즈: <select name="tshirt">
-      <option value="S(85)">S(85)
-      <option value="M(90)">M(90)
-      <option value="L(95)">L(95)
-      <option value="XL(100)">XL(100)
-      <option value="XXL(105)">XXL(105)
-      <option value="XXXL(110)">XXXL(110)
-  </select>
-  <br/>
-  <input type="submit" value="참가신청" />
+              <form action="/register/do" method="post" id="register-form">
+                <fieldset>
+                  <legend>사전등록</legend>
+                  <dl>
+		    <dt><label for="email">email</label> : </dt><dd><input type="text" name="email" size="30" id="email" /></dd>
+		    <dt><label for="password">비밀번호</label> : </dt><dd><input type="password" name="password" size="10" id="password" /></dd>
+		    <dt><label for="password_confirm">비밀번호(확인)</label> : </dt><dd><input type="password" name="password_confirm" size="10" id="password_confirm" /></dd>
+		    <dt><label for="name">이름</label> : </dt><dd><input type="text" name="name" size="10" id="name" /></dd>
+		    <dt><label for="nickname">닉네임</label> : </dt><dd><dd><input type="text" name="nick" size="10" id="nick" /></dd>
+		    <dt><label for="mobile">휴대전화</label> : </dt><dd><dd><input type="text" name="phone" size="20" id="mobile"/></dd>
+		  
+                    <dt>티셔츠 사이즈: </dt>
+                    <dd>
+                      <select name="tshirt">
+                        <option value="S(85)">S(85)</option>
+                        <option value="M(90)">M(90)</option>
+                        <option value="L(95)">L(95)</option>
+                        <option value="XL(100)">XL(100)</option>
+                        <option value="XXL(105)">XXL(105)</option>
+                        <option value="XXXL(110)">XXXL(110)</option>
+                      </select>
+                    </dd>
+                  </dl>
+                  <div class="button"><input type="submit" value="참가신청" /></div>
+                </fieldset>
+              </form>
+            </div>
