--- a/trunk/www-framework/kpw/template/tt/register/default.html
+++ b/trunk/www-framework/kpw/template/tt/register/default.html
@@ -1,5 +1,8 @@
             <div class="content_block">
               <h1>사전등록</h1>
+	      <br />
+              <p>blah</p>
+              <h2>신청양식</h2>
   [% IF form_messages %]
               <ul>
   [% FOREACH msg IN form_messages %]
