--- a/trunk/www-framework/kpw/template/tt/register/default.html
+++ b/trunk/www-framework/kpw/template/tt/register/default.html
@@ -31,6 +31,11 @@
                         <option value="XXXL(110)">XXXL(110)</option>
                       </select>
                     </dd>
+		    <dt>직업 : </dt>
+		    <dd><select name="type">
+			<option value="worker">직장인</option>
+			<option value="student">학생</option>
+		        </select>
                   </dl>
                   <div class="button"><input type="submit" value="신청" /></div>
                 </fieldset>
