--- a/www-framework/kpw/template/tt/register/default.html
+++ b/www-framework/kpw/template/tt/register/default.html
@@ -31,11 +31,14 @@
                         <option value="XXXL(110)">XXXL(110)</option>
                       </select>
                     </dd>
-		    <dt>직업 : </dt>
+		    <dt>직업: </dt>
 		    <dd><select name="type">
 			<option value="worker">직장인</option>
 			<option value="student">학생</option>
 		        </select>
+                    </dd>
+		    <dt>소속: </dt>
+		    <dd><input type="text" name="location" size="50" id="location" /></dd>
                   </dl>
                   <div class="button"><input type="submit" value="신청" /></div>
                 </fieldset>
